[package]
name = "fusioncache-rs"
version = "0.1.1"
edition = "2024"
description = "A multilevel cache for Rust. Inspired by https://github.com/ZiggyCreatures/FusionCache"
license = "MIT"

[dependencies]
moka = { version = "0.12.10", features = ["future"] }
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"
futures = "0.3.31"
async-trait = "0.1.88"
redis = { version = "0.28.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
tokio-retry = "0.3"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
